--- a/Web/index.html
+++ b/Web/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="rectangle-2">
-        <img src="./Images/Rectangle 2.png" alt="" />
+        <!-- <img src="./Images/Rectangle 2.png" alt="" /> -->
         <h1>
           Light. Sound. Celebrate. <br />
           This year, bring home.
@@ -80,10 +80,10 @@
       </div>
       <div class="union">
         <div class="polygon-5">
-          <!-- <img src="./Images/Polygon 5.png" alt=""> -->
+          <img src="./Images/Polygon 5.png" alt="">
         </div>
         <div class="rectangle-13">
-          <!-- <img src="./Images/Rectangle 13.png" alt=""> -->
+          <img src="./Images/Rectangle 13.png" alt="">
         </div>
         <img src="./Images/Union (1).svg" alt="" />
         <div class="eclipse"></div>
